add seperate pages

--- a/templates/main.html
+++ b/templates/main.html
@@ -1,23 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-    <title>Bootstrap Example</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-</head>
+{% block body %}
 
-<body>
+<ul> 
+    {% for word in words %}
+    <li>{{word}}</li>
+    {% endfor %}
+</ul>
 
-    <div class="container-fluid">
-        {{ word }} <br>
-        {{ english }} <br>
-        {{ sentence }} <br>
-    </div>
 
-</body>
+<!-- {{words}} -->
 
-</html>
+{% endblock %}
