--- a/templates/main.html
+++ b/templates/main.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 
+{% block title %}Words{% endblock %}
+
 {% block body %}
 
 <ul> 
     {% for word in words %}
-    <li>{{word}}</li>
+    <li><a href="/word/search?word={{word}}" target="_blank">{{word}}</a></li>
     {% endfor %}
 </ul>
 
