--- a/templates/words.html
+++ b/templates/words.html
@@ -6,7 +6,7 @@
 
 <ul> 
     {% for word in words %}
-    <li><a href="/word/search?word={{word}}" target="_blank">{{word}}</a></li>
+    <li><a href="/word/get_word?type={{type}}&word={{word}}">{{word}}</a></li>
     {% endfor %}
 </ul>
 
