--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+        <style>
+            textarea {
+                resize: none;
+            }
+        </style>
 </head>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -59,8 +64,9 @@
     <div class="container pt-2">
 
         {% if message %}
-        <div class="alert alert-danger" role="alert">
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
             {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
         {% endif %}
         {% block body %}{% endblock %}
