--- a/templates/words.html
+++ b/templates/words.html
@@ -4,11 +4,46 @@
 
 {% block body %}
 
-<ul> 
-    {% for word in words %}
-    <li><a href="/word/get_word?type={{type}}&word={{word}}">{{word}}</a></li>
-    {% endfor %}
-</ul>
+<h5 class="mb-2 mt-1">{{type.title()}}</h5>
+
+{% if not words %}
+<span>No words</span>
+{% endif %}
+
+{% for word in words %}
+<div class="input-group mb-2">
+    <a href="/word/get_word?type={{type}}&word={{word}}" class="button input-group-text"><i
+            class="fas fa-arrow-right"></i></a>
+    <a href="/word/get_word?type={{type}}&word={{word}}" class="button btn btn-success" type="button">{{word}}</a>
+    <a href="/word/update_word?type={{type}}&word={{word}}" class="button btn btn-warning"><i
+            class="fas fa-pencil-alt"></i></a>
+    
+    <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#delete-word">
+        <i class="fas fa-trash"></i>
+    </button>
+</div>
+
+
+<!-- Modal -->
+<div class="modal fade" id="delete-word" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="staticBackdropLabel">Delete Word</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete this word?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <a href="/word/delete_word?type={{type}}&word={{word}}" class="button btn btn-danger">Delete</a>
+            </div>
+        </div>
+    </div>
+</div>
+{% endfor %}
 
 
 <!-- {{words}} -->
