--- a/templates/snippets/add_update.html
+++ b/templates/snippets/add_update.html
@@ -1,36 +1,66 @@
 <div class="mt-1">
-    <h5>Add/Update a word:</h5>
+    {% if not word_dict %}
+    <h5>Add a word:</h5>
     <form class="d-flex" action="/word/add_update_word">
         <label class="w-100 mt-2">
             <div class="input-group mb-3">
-                <input type="text" class="form-control" name="word" placeholder="Word">
+                <input type="text" class="form-control" name="word" placeholder="Word" required value="">
             </div>
 
             <div class="input-group mb-3">
-
-                <select class="form-select" name="type">
-                    <option selected value="noun">Noun</option>
-                    <option value="verb">Verb</option>
-                    <option value="adjective">Adjective</option>
-                </select>
-
+                {% include 'snippets/type_selector.html' %}
             </div>
 
             <div class="input-group mb-3">
-                <input type="text" class="form-control" name="english" placeholder="English">
+                <input type="text" class="form-control" name="english" placeholder="English" required>
             </div>
 
             <div class="input-group mb-3">
-                <textarea class="form-control" name="sentence" placeholder="German sentence"></textarea>
+                <textarea class="form-control" name="sentence" placeholder="German sentence" required></textarea>
             </div>
 
             <div class="input-group mb-3">
-                <textarea class="form-control" name="sentence_eng" placeholder="English sentence"></textarea>
+                <textarea class="form-control" name="sentence_eng" placeholder="English sentence" required></textarea>
             </div>
 
             <div class="input-group mb-3">
-                <button type="submit" class="btn btn-warning">Add/Update</button>
+                <button type="submit" class="btn btn-warning">Add</button>
             </div>
         </label>
     </form>
+    {% endif %}
+    {% if word_dict %}
+    <h5>Update a word:</h5>
+    <form class="d-flex" action="/word/add_update_word">
+        <label class="w-100 mt-2">
+            <div class="input-group mb-3">
+                <input type="text" class="form-control" name="word" placeholder="Word" required value="{{word_dict['word']}}">
+            </div>
+    
+            <div class="input-group mb-3">
+    
+                <div class="input-group mb-3">
+                    {% include 'snippets/type_selector.html' %}
+                </div>
+    
+            </div>
+    
+            <div class="input-group mb-3">
+                <input type="text" class="form-control" name="english" placeholder="English" required value="{{word_dict['english']}}">
+            </div>
+    
+            <div class="input-group mb-3">
+                <textarea class="form-control" name="sentence" placeholder="German sentence" required>{{word_dict['sentence']}}</textarea>
+            </div>
+    
+            <div class="input-group mb-3">
+                <textarea class="form-control" name="sentence_eng" placeholder="English sentence" required>{{word_dict['sentence_eng']}}</textarea>
+            </div>
+    
+            <div class="input-group mb-3">
+                <button type="submit" class="btn btn-warning">Update</button>
+            </div>
+        </label>
+    </form>
+    {% endif %}
 </div>
