--- a/templates/types.html
+++ b/templates/types.html
@@ -7,15 +7,14 @@
 
 <div class="row">
     <div class="col-md-6 mt-1">
-        <h5>Word types</h5>
-        <ul>
-            {% for type in types %}
-            <li><a href="/word/list?type={{type}}">{{type}}s</a></li>
-            {% endfor %}
-        </ul>
-        <form class="d-flex pb-3" action="/update">
-            <button class="btn btn-warning" type="submit">Update words</button>
-        </form>
+        <h5 class="mb-2">Word types</h5>
+
+        {% for type in types %}
+        <div class="input-group mb-2">
+            <a href="/word/list?type={{type}}" class="button input-group-text"><i class="fas fa-arrow-right"></i></a>
+            <a href="/word/list?type={{type}}" class="button btn btn-success" type="button">{{type}}</a>
+        </div>
+        {% endfor %}
     </div>
     <div class="col-md-6 ">
         {% include 'snippets/add_update.html' %}
