--- a/templates/types.html
+++ b/templates/types.html
@@ -6,7 +6,7 @@
 
 
 <div class="row">
-    <div class="col-md-6 mt-1">
+    <div class="col-md-6 mt-1 mb-3">
         <h5 class="mb-2">Word types</h5>
 
         {% for type in types %}
