--- a/templates/snippets/add_update.html
+++ b/templates/snippets/add_update.html
@@ -16,11 +16,11 @@
             </div>
 
             <div class="input-group mb-3">
-                <textarea class="form-control" name="sentence" placeholder="German sentence" required></textarea>
+                <textarea class="form-control" name="sentence" placeholder="German sentence"></textarea>
             </div>
 
             <div class="input-group mb-3">
-                <textarea class="form-control" name="sentence_eng" placeholder="English sentence" required></textarea>
+                <textarea class="form-control" name="sentence_eng" placeholder="English sentence"></textarea>
             </div>
 
             <div class="input-group mb-3">
@@ -50,11 +50,11 @@
             </div>
     
             <div class="input-group mb-3">
-                <textarea class="form-control" name="sentence" placeholder="German sentence" required>{{word_dict['sentence']}}</textarea>
+                <textarea class="form-control" name="sentence" placeholder="German sentence">{{word_dict['sentence']}}</textarea>
             </div>
     
             <div class="input-group mb-3">
-                <textarea class="form-control" name="sentence_eng" placeholder="English sentence" required>{{word_dict['sentence_eng']}}</textarea>
+                <textarea class="form-control" name="sentence_eng" placeholder="English sentence">{{word_dict['sentence_eng']}}</textarea>
             </div>
     
             <div class="input-group mb-3">
