--- a/templates/snippets/add_update.html
+++ b/templates/snippets/add_update.html
@@ -1,7 +1,7 @@
 <div class="mt-1">
     {% if not word_dict %}
     <h5>Add a word:</h5>
-    <form class="d-flex" action="/word/add_update_word">
+    <form class="d-flex" action="{{ url_for('WordView:add_update_word') }}">
         <label class="w-100 mt-2">
             <div class="input-group mb-3">
                 <input type="text" class="form-control" name="word" placeholder="Word" required value="">
@@ -9,10 +9,6 @@
 
             <div class="input-group mb-3">
                 {% include 'snippets/type_selector.html' %}
-            </div>
-
-            <div class="input-group mb-3">
-                <input type="text" class="form-control" name="english" placeholder="English" required>
             </div>
 
             <div class="input-group mb-3">
@@ -31,7 +27,7 @@
     {% endif %}
     {% if word_dict %}
     <h5>Update a word:</h5>
-    <form class="d-flex" action="/word/add_update_word">
+    <form class="d-flex" action="{{ url_for('WordView:add_update_word') }}">
         <label class="w-100 mt-2">
             <div class="input-group mb-3">
                 <input type="text" class="form-control" name="word" placeholder="Word" required value="{{word_dict['word']}}">
@@ -43,10 +39,6 @@
                     {% include 'snippets/type_selector.html' %}
                 </div>
     
-            </div>
-    
-            <div class="input-group mb-3">
-                <input type="text" class="form-control" name="english" placeholder="English" required value="{{word_dict['english']}}">
             </div>
     
             <div class="input-group mb-3">
