--- a/templates/types.html
+++ b/templates/types.html
@@ -11,8 +11,8 @@
 
         {% for type in types %}
         <div class="input-group mb-2">
-            <a href="/word/list?type={{type}}" class="button input-group-text"><i class="fas fa-arrow-right"></i></a>
-            <a href="/word/list?type={{type}}" class="button btn btn-success" type="button">{{type}}</a>
+            <button onclick="location.href='/word/list?type={{type}}'" class="input-group-text"><i class="fas fa-arrow-right"></i></button>
+            <button onclick="location.href='/word/list?type={{type}}'" class="btn btn-success" type="button">{{type}}s</button>
         </div>
         {% endfor %}
     </div>
