--- a/templates/words.html
+++ b/templates/words.html
@@ -5,46 +5,51 @@
 {% block body %}
 
 <h5 class="mb-2 mt-1">{{type.title()}}</h5>
+<div class="row">
+    <div class="col-lg-4 ">
+        {% if not words %}
+        <span>No words</span>
+        {% endif %}
 
-{% if not words %}
-<span>No words</span>
-{% endif %}
+        {% for word in words %}
+        <div class="input-group mb-2">
+            <button onclick="location.href='/word/get_word?type={{type}}&word={{word}}'" class="input-group-text"><i class="fas fa-arrow-right"></i></button>
+            <button onclick="location.href='/word/get_word?type={{type}}&word={{word}}'"
+                class="form-control btn btn-success" type="button">{{word}}</button>
+            <button onclick="location.href='/word/update_word_redirect?word={{word}}'" class="btn btn-warning"><i
+                    class="fas fa-pencil-alt"></i></button>
 
-{% for word in words %}
-<div class="input-group mb-2">
-    <button onclick="location.href='/word/get_word?type={{type}}&word={{word}}'" class="input-group-text"><i
-            class="fas fa-arrow-right"></i></button>
-    <button onclick="location.href='/word/get_word?type={{type}}&word={{word}}'" class="btn btn-success" type="button">{{word}}</button>
-    <button onclick="location.href='/word/update_word_redirect?word={{word}}'" class="btn btn-warning"><i
-            class="fas fa-pencil-alt"></i></button>
-    
-    <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#delete-word">
-        <i class="fas fa-trash"></i>
-    </button>
-</div>
+            <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#delete-word">
+                <i class="fas fa-trash"></i>
+            </button>
+        </div>
 
 
-<!-- Modal -->
-<div class="modal fade" id="delete-word" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-    aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="staticBackdropLabel">Delete Word</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                Are you sure you want to delete this word?
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button onclick="location.href='/word/delete_word?type={{type}}&word={{word}}'" class="btn btn-danger">Delete</button>
+        <!-- Modal -->
+        <div class="modal fade" id="delete-word" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+            aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="staticBackdropLabel">Delete Word</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        Are you sure you want to delete this word?
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button onclick="location.href='/word/delete_word?type={{type}}&word={{word}}'"
+                            class="btn btn-danger">Delete</button>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-</div>
-{% endfor %}
+        {% endfor %}
 
+    </div>
+
+</div>
 
 <!-- {{words}} -->
 
