--- a/templates/snippets/type_selector.html
+++ b/templates/snippets/type_selector.html
@@ -1,7 +1,18 @@
-<select class="form-select" name="type">
-    <option selected value="noun">Noun</option>
+
+    
+<select id="type-select" class="form-select" name="type">
+    <option value="noun">Noun</option>
     <option value="verb">Verb</option>
     <option value="adjective">Adjective</option>
     <option value="adverb">Adverb</option>
     <option value="phrase">Phrase</option>
 </select>
+
+{% if word_dict %}
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+<script>
+    $("#type-select").val("{{word_dict['type']}}");
+</script>
+{% endif %}
