--- a/templates/snippets/add_update.html
+++ b/templates/snippets/add_update.html
@@ -29,6 +29,7 @@
     <h5>Update a word:</h5>
     <form class="d-flex" action="{{ url_for('WordView:add_update_word') }}">
         <label class="w-100 mt-2">
+            <input type="hidden" name="old_word" value="{{old_word}}" />
             <div class="input-group mb-3">
                 <input type="text" class="form-control" name="word" placeholder="Word" required value="{{word_dict['word']}}">
             </div>
