--- a/templates/base.html
+++ b/templates/base.html
@@ -73,7 +73,7 @@
     <div class="container pt-2">
 
         {% if message %}
-        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
             {{ message }}
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
