--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
                 </li> -->
             </ul>
             <form class="d-flex" action="/word/search">
-                <input class="form-control me-2" name="word" type="search" placeholder="Search" aria-label="Search">
+                <input class="form-control me-2" name="word" type="search" placeholder="Word" aria-label="Search" required>
                 <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
         </div>
