--- a/templates/snippets/add_update.html
+++ b/templates/snippets/add_update.html
@@ -20,7 +20,7 @@
             </div>
 
             <div class="input-group mb-3">
-                <button type="submit" class="btn btn-warning">Add</button>
+                <button type="submit" class="btn btn-warning w-100">Add</button>
             </div>
         </label>
     </form>
@@ -29,7 +29,7 @@
     <h5>Update a word:</h5>
     <form class="d-flex" action="{{ url_for('WordView:add_update_word') }}">
         <label class="w-100 mt-2">
-            <input type="hidden" name="old_word" value="{{old_word}}" />
+            <input type="hidden" name="word_id" value="{{word_id}}" />
             <div class="input-group mb-3">
                 <input type="text" class="form-control" name="word" placeholder="Word" required value="{{word_dict['word']}}">
             </div>
@@ -51,7 +51,7 @@
             </div>
     
             <div class="input-group mb-3">
-                <button type="submit" class="btn btn-warning">Update</button>
+                <button type="submit" class="btn btn-warning w-100">Update</button>
             </div>
         </label>
     </form>
