--- a/templates/snippets/back_button.html
+++ b/templates/snippets/back_button.html
@@ -1,4 +1,4 @@
-<button type="button" class="btn btn-primary mb-2" onclick="location.href='{{back_link}}'"><i
+<button type="button" class="btn btn-dark mb-2" onclick="location.href='{{back_link}}'"><i
         class="fas fa-arrow-left"></i>&nbsp;&nbsp;{{back_text}}</button>
 
         <!--  -->
