--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-        <a class="navbar-brand" href="{{url_for('starting_url')}}">German Words</a>
+        {% block back_button %}{% endblock %}<a class="navbar-brand" href="{{url_for('starting_url')}}">German Words</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -60,8 +60,8 @@
                 </li> -->
             </ul>
             <form class="d-flex" action="{{url_for('WordView:search')}}">
-                <input class="form-control me-2" name="word" type="search" placeholder="Word" aria-label="Search" required>
-                <button class="btn btn-outline-success" type="submit">Search</button>
+                <input class="form-control me-2 shadow-sm" name="word" type="search" placeholder="Word" aria-label="Search" required>
+                <button class="btn btn-outline-success shadow-sm" type="submit">Search</button>
             </form>
         </div>
     </div>
