--- a/templates/words.html
+++ b/templates/words.html
@@ -2,11 +2,13 @@
 
 {% block title %}Words{% endblock %}
 
-{% block body %}
-
-{% with back_link=url_for('starting_url'), back_text="All words" %}
+{% block back_button %}
+{% with back_link=url_for('starting_url')%}
 {% include "snippets/back_button.html" %}
 {% endwith %}
+{% endblock %}
+
+{% block body %}
 
 <h5 class="mb-2 mt-1">{{type.title()}}</h5>
 <div class="row">
@@ -15,22 +17,25 @@
         <span>No words</span>
         {% endif %}
         {% for word in words %}
-        <div class="input-group mb-2">
-            <button onclick="location.href=`{{url_for('WordView:get_word', word_id=word[1])}}`" class="input-group-text"><i class="fas fa-arrow-right"></i></button>
-            <button onclick="location.href=`{{url_for('WordView:get_word', word_id=word[1])}}`" style="text-align: left;"
-                class="form-control btn btn-success" type="button">{{word[0]}}</button>
-            <button onclick="location.href=`{{url_for('WordView:update_word_redirect', word_id=word[1])}}`" class="btn btn-warning"><i
-                    class="fas fa-pencil-alt"></i></button>
+        <div class="shadow">
+            <div class="input-group mb-2">
+                <button onclick="location.href=`{{url_for('WordView:get_word', word_id=word[1])}}`"
+                    class="input-group-text"><i class="fas fa-arrow-right"></i></button>
+                <button onclick="location.href=`{{url_for('WordView:get_word', word_id=word[1])}}`"
+                    style="text-align: left;" class="form-control btn btn-success" type="button">{{word[0]}}</button>
+                <button onclick="location.href=`{{url_for('WordView:update_word_redirect', word_id=word[1])}}`"
+                    class="btn btn-warning"><i class="fas fa-pencil-alt"></i></button>
 
-            <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#delete-word-{{word[1]}}">
-                <i class="fas fa-trash"></i>
-            </button>
+                <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                    data-bs-target="#delete-word-{{word[1]}}">
+                    <i class="fas fa-trash"></i>
+                </button>
+            </div>
         </div>
 
-
         <!-- Modal -->
-        <div class="modal fade" id="delete-word-{{word[1]}}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-            aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal fade" id="delete-word-{{word[1]}}" data-bs-backdrop="static" data-bs-keyboard="false"
+            tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -42,7 +47,8 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button onclick="location.href=`{{url_for('WordView:delete_word', word_id=word[1], type=type)}}`"
+                        <button
+                            onclick="location.href=`{{url_for('WordView:delete_word', word_id=word[1], type=type)}}`"
                             class="btn btn-danger">Delete</button>
                     </div>
                 </div>
