--- a/templates/base.html
+++ b/templates/base.html
@@ -28,50 +28,19 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-        {% block back_button %}{% endblock %}<a class="navbar-brand" href="{{url_for('starting_url')}}">German Words</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <!-- <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li> -->
-            </ul>
-            <form class="d-flex" action="{{url_for('WordView:search')}}">
-                <input class="form-control me-2 shadow-sm" name="word" type="search" placeholder="Word" aria-label="Search" required>
-                <button class="btn btn-outline-success shadow-sm" type="submit">Search</button>
-            </form>
-        </div>
+        {% block back_button %}{% endblock %}
+        
+        {% if authenticated %}
+        {% include 'snippets/logged_in_nav.html' %}
+        {% else %}
+        {% include 'snippets/logged_out_nav.html' %}
+        {% endif %}
+
     </div>
 </nav>
 
 <body>
-
-
-    <div class="container pt-2">
-
+    <div class="container pt-2 pb-2">
         {% if message %}
         <div class="alert alert-warning alert-dismissible fade show" role="alert">
             {{ message }}
