--- a/templates/index.html
+++ b/templates/index.html
@@ -9,13 +9,17 @@
     <div class="col-lg-4 col-md-5 mt-1 mb-2">
         <h5 class="mb-3">Study:</h5>
 
+        {% if not types %}
+        <span>No words</span>
+        {% endif %}
+
         {% for type in types %}
         <div class="shadow">
             <div class="input-group mb-2">
                 <button onclick="location.href=`{{url_for('WordView:list', type=type)}}`" class="input-group-text"><i
                         class="fas fa-arrow-right"></i></button>
                 <button onclick="location.href=`{{url_for('WordView:list', type=type)}}`"
-                    class="form-control btn btn-success" style="text-align:left" type="button">{{type}}s</button>
+                    class="form-control btn btn-success" style="text-align:left" type="button">{{type.title()}}s</button>
             </div>
         </div>
         {% endfor %}
@@ -23,11 +27,12 @@
     <div class="col-lg-2 col-md-1">
 
     </div>
+    {% if authenticated %}
     <div class="col-lg-6 col-md-6">
         <hr class="mb-4 d-sm-block d-md-none d-lg-none">
         {% include 'snippets/add_update.html' %}
     </div>
-
+    {% endif %}
 </div>
 
 
