--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -38,7 +38,9 @@
         <small id="emailHelp" class="form-text text-muted">Confirm your password</small>
       </div>
       <button type="submit " class="btn btn-warning mt-3 w-100">Register</button>
+      
     </form>
+    <button onclick="location.href=`{{url_for('login')}}`" class="btn btn-dark mt-1 w-100">Login</button>
 
   </div>
 </div>
