--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
     <div class="container">
         {% block back_button %}{% endblock %}
         
-        {% if authenticated %}
+        {% if session['user_id'] %}
         {% include 'snippets/logged_in_nav.html' %}
         {% else %}
         {% include 'snippets/logged_out_nav.html' %}
