--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -17,7 +17,9 @@
         <small id="emailHelp" class="form-text text-muted">Enter your password</small>
       </div>
       <button type="submit" class="btn btn-warning mt-3 w-100">Log in</button>
+
     </form>
+    <button onclick="location.href=`{{url_for('register')}}`" class="btn btn-dark mt-1 w-100">Register</button>
   </div>
 </div>
 </div>
