--- a/templates/snippets/add_update.html
+++ b/templates/snippets/add_update.html
@@ -1,6 +1,6 @@
 <div class="mt-1">
     {% if not word_dict %}
-    <h5>Add a word:</h5>
+    <h5>Add new word:</h5>
     <form class="d-flex" action="{{ url_for('WordView:add_update_word') }}">
         <label class="w-100 mt-2">
             <div class="input-group mb-3 shadow-sm">
