--- a/templates/snippets/logged_out_nav.html
+++ b/templates/snippets/logged_out_nav.html
@@ -6,18 +6,10 @@
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{url_for('login')}}">Login</a>
+            <a class="nav-link active" aria-current="page" href="{{url_for('login')}}">&nbsp;<i class="fas fa-sign-in-alt"></i>&nbsp;&nbsp;Login</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{url_for('register')}}">Register</a>
+            <a class="nav-link active" aria-current="page" href="{{url_for('register')}}">&nbsp;<i class="fas fa-user-plus"></i>&nbsp;&nbsp;Register</a>
         </li> 
-        <!-- <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{url_for('MainView:index')}}">Words</a>
-        </li> -->
     </ul>
-    <!-- <form class="d-flex" action="{{url_for('WordView:search')}}">
-        <input class="form-control me-2 shadow-sm" name="word" type="search" placeholder="Word" aria-label="Search"
-            required>
-        <button class="btn btn-outline-success shadow-sm" type="submit">Search</button>
-    </form> -->
 </div>
