--- a/templates/snippets/logged_in_nav.html
+++ b/templates/snippets/logged_in_nav.html
@@ -5,14 +5,8 @@
 </button>
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <!-- <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Login</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Signup</a>
-            </li> -->
         <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{url_for('logout')}}">Logout</a>
+            <a class="nav-link active" aria-current="page" href="{{url_for('logout')}}">&nbsp;<i class="fas fa-sign-out"></i>&nbsp;&nbsp;Logout</a>
         </li>
     </ul>
     <form class="d-flex" action="{{url_for('WordView:search')}}">
